test: screen-reader

--- a/.github/actions/npm-cache/action.yml
+++ b/.github/actions/npm-cache/action.yml
@@ -32,6 +32,7 @@ runs:
 
     - name: 🆒 Init Cache
       uses: actions/cache@v4
+      working-directory: screen-reader-test
       id: "cache"
       with:
         path: ${{ inputs.nodeModulesPath }}
@@ -40,6 +41,7 @@ runs:
           ${{ runner.os }}-node-${{ inputs.nodeVersion }}
 
     - name: ⏬ NPM ci
+      working-directory: screen-reader-test
       shell: bash
       if: steps.cache.outputs.cache-hit != 'true'
       run: |
