--- a/.github/actions/npm-cache/action.yml
+++ b/.github/actions/npm-cache/action.yml
@@ -18,11 +18,10 @@ runs:
   using: "composite"
   steps:
     - name: 🆙 Setup node
-      # pick the Node version to use and install it
-      # https://github.com/actions/setup-node
       uses: actions/setup-node@v4
       with:
         node-version: ${{ inputs.nodeVersion }}
+        cache-dependency-path: screen-reder-test/package-lock.json
 
     - name: Display node and npm version
       shell: bash
