--- a/.github/actions/npm-cache/action.yml
+++ b/.github/actions/npm-cache/action.yml
@@ -40,6 +40,7 @@ runs:
 
     - name: ⏬ NPM ci
       shell: bash
+      working-directory: screen-reader-test
       if: steps.cache.outputs.cache-hit != 'true'
       run: |
         npm ci
