--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -21,7 +21,5 @@ jobs:
 
   test-screen-reader:
     uses: ./.github/workflows/02-e2e-screen-reader.yml
-    needs: [init-playwright, get-playwright-version]
-    with:
-      version: ${{ needs.get-playwright-version.outputs.version }}
+    needs: [init-playwright]
 
