--- a/.github/workflows/00-init-playwright.yml
+++ b/.github/workflows/00-init-playwright.yml
@@ -18,7 +18,8 @@ jobs:
       - name: ⏬ Checkout repo
         uses: actions/checkout@v4
 
+      - name: 🔄 Init Cache Default
+        uses: ./.github/actions/npm-cache
+
       - name: 🔄 Init Playwright
         uses: ./.github/actions/playwright-cache
-        with:
-          os: ${{ matrix.os }}
