--- a/.github/actions/npm-cache/action.yml
+++ b/.github/actions/npm-cache/action.yml
@@ -33,7 +33,7 @@ runs:
       uses: actions/cache@v4
       id: "cache"
       with:
-        path: ${{ inputs.nodeModulesPath }}
+        path: screen-reader-test/node-modules
         key: ${{ runner.os }}-node-${{ inputs.nodeVersion }}-${{ hashFiles(inputs.packageLockPath) }}
         restore-keys: |
           ${{ runner.os }}-node-${{ inputs.nodeVersion }}
