--- a/.github/workflows/02-e2e-screen-reader.yml
+++ b/.github/workflows/02-e2e-screen-reader.yml
@@ -20,10 +20,11 @@ jobs:
       - name: ⏬ Checkout repo
         uses: actions/checkout@v4
 
+      - name: 🔄 Init Cache Default
+        uses: ./.github/actions/npm-cache
+
       - name: 🔄 Init Playwright
         uses: ./.github/actions/playwright-cache
-        with:
-          os: ${{ matrix.os }}
 
       - name: 👩‍🔬 Test showcase with Playwright 🎭
         working-directory: screen-reader-test
