test: screen-reader

--- a/.github/workflows/02-e2e-screen-reader.yml
+++ b/.github/workflows/02-e2e-screen-reader.yml
@@ -9,7 +9,7 @@ permissions:
 
 jobs:
   playwright-screen-reader:
-    name: 🧪🎭 - screen-reader - ${{ matrix.os }} - ${{ matrix.framework }}
+    name: 🧪🎭 - screen-reader - ${{ matrix.os }} - ${{ matrix.framework }} - ${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
