test: screen-reader

--- a/.github/workflows/02-e2e-screen-reader.yml
+++ b/.github/workflows/02-e2e-screen-reader.yml
@@ -64,7 +64,7 @@ jobs:
         env:
           HOME: /root
         run: |
-          npx playwright install --with-deps ${{ env.BROWSER }}
+          npx playwright install --with-deps ${{ env.BROWSER }} --loglevel=verbose
           npm run test:screen-reader:${{ matrix.os }} -- --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
 
       - name: 🆙 Upload test results
