--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -12,6 +12,9 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  init-playwright:
+    uses: ./.github/workflows/00-init-playwright.yml
+
   test-screen-reader:
     uses: ./.github/workflows/02-e2e-screen-reader.yml
-
+    needs: [init-playwright]
