--- a/.github/workflows/00-init-playwright.yml
+++ b/.github/workflows/00-init-playwright.yml
@@ -15,5 +15,5 @@ jobs:
       - name: ⏬ Checkout repo
         uses: actions/checkout@v4
 
-      - name: 🔄 Init Cache Default
-        uses: ./.github/actions/npm-cache
+      - name: 🔄 Init Playwright Cache
+        uses: ./.github/actions/playwright-cache
