--- a/.github/workflows/02-e2e-screen-reader.yml
+++ b/.github/workflows/02-e2e-screen-reader.yml
@@ -16,8 +16,8 @@ jobs:
       matrix:
         os: [macos-13, windows-2022]
         framework: [react]
-        shardIndex: [1, 2]
-        shardTotal: [2]
+        shardIndex: [1, 2, 3]
+        shardTotal: [3]
     steps:
       - name: ⏬ Checkout repo
         uses: actions/checkout@v4
@@ -44,4 +44,12 @@ jobs:
         with:
           name: ${{ matrix.framework }}-screen-reader-${{ matrix.os }}-${{ matrix.shardIndex }}
           path: ./screen-reader-test/${{ matrix.framework }}-showcase/test-results
+          retention-days: 30
+
+      - name: 🆙 Upload test results
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.framework }}-screen-reader-${{ matrix.os }}-${{ matrix.shardIndex }}
+          path: ./screen-reader-test/${{ matrix.framework }}-showcase/recordings
           retention-days: 30
