--- a/adaptive-icons/package.json
+++ b/adaptive-icons/package.json
@@ -21,5 +21,8 @@
     "icon-font-buildr": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "oslllo-svg-fixer": "^2.2.0"
+  },
+  "overrides": {
+    "cross-spawn": "~7.0.5"
   }
 }
