--- a/radio-checkbox-screenreader-accessibility/package.json
+++ b/radio-checkbox-screenreader-accessibility/package.json
@@ -12,10 +12,14 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "@db-ui/components": "^0.0.68",
     "cpx2": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "vite": "^5.1.7"
+  },
+  "private": true,
+  "overrides": {
+    "cross-spawn": "~7.0.5"
   }
 }
