--- a/adaptive-icons/package.json
+++ b/adaptive-icons/package.json
@@ -19,7 +19,7 @@
   "private": true,
   "devDependencies": {
     "icon-font-buildr": "^2.0.0",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "7.0.2",
     "oslllo-svg-fixer": "^2.2.0"
   },
   "overrides": {
