--- a/radio-checkbox-screenreader-accessibility/package.json
+++ b/radio-checkbox-screenreader-accessibility/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@db-ui/components": "^0.0.68",
     "cpx2": "^7.0.1",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "7.0.2",
     "vite": "^5.1.7"
   },
   "private": true,
